# impeccable-quarto

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOP.md  MEMORY.md  README.md  _brand.yml  _quarto.yml  demo-section-layouts.qmd  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: content-translator.md  layout-auditor.md  slide-critic.md  slide-fixer.md  theme-designer.md  typography-reviewer.md  verifier.md
.claude/hooks/: protect-files.sh  verify-reminder.py
.claude/references/: anti-patterns.md  color-and-contrast.md  slide-patterns.md
.claude/rules/: anti-patterns.md  orchestrator-protocol.md  quality-gates.md  review-protocol.md  source-translation.md
.claude/skills/: adapt-slides.md  animate-slides.md  arrange-slides.md  audit-slides.md  bolder-slides.md  challenge-deck.md  clarify-slides.md  colorize-slides.md  create-deck.md  critique-slides.md  distill-slides.md  qa-loop.md  (+10 more)
docs/: index.html  script.js  style.css
examples/: academic-paper.qmd  demo.qmd  lightning-talk.qmd  matrix-game-1.qmd  matrix-game-2.qmd  matrix-game-3.qmd  product-launch.qmd  references.bib  tech-talk.qmd
scripts/: deploy.sh  new-deck.sh  pre-commit-quality.sh  quality_score.py  render.sh  setup.sh  sync-extension.sh  theme-preview.sh
templates/: academic.qmd  agent-report.md  corporate.qmd  creative.qmd  lightning.qmd  quality-report.md  session-log.md
themes/: impeccable-academic.scss  impeccable-corporate.scss  impeccable-creative.scss  impeccable-dark.scss  impeccable-lightning.scss  impeccable.scss
(+28 files in other folders)
